# clawvatar-core

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_test_ui.py  test_e2e.py  test_videocall.py
clawvatar_core/: __init__.py  cli.py  config.py  db.py  director.py  server.py  session.py  session_manager.py  stream.py
clawvatar_core/adapters/: openclaw.py  ruh_voice.py  standalone.py
clawvatar_core/agent/: _group_worker.py  config.py  group.py  openclaw_bridge.py  room_manager.py  run.py  worker.py
clawvatar_core/audio/: collector.py
clawvatar_core/avatar/: store.py
clawvatar_core/engine/: client.py  embedded.py  remote.py
clawvatar_core/sinks/: base.py  composite.py  websocket_sink.py
clawvatar_core/static/: index.html
deploy/: clawvatar-agent.service  clawvatar-server.service  install.sh
tests/: test_audio_collector.py  test_avatar_store.py  test_config.py  test_sinks.py
